# starling

./: .editorconfig  .gitignore  AGENTS.md  Directory.Build.props  Directory.Packages.props  README.md  Starling.sln  Tessera.sln  aspire.config.json
.claude/plans/: my-designer-has-completed-linear-rainbow.md
.github/workflows/: ci.yml  native.yml
Starling.AppHost/: AppHost.cs  Starling.AppHost.csproj
Tessera.AppHost/: AppHost.cs
bench/Starling.Bench/: Starling.Bench.csproj
bench/Tessera.Bench/: Program.cs  Tessera.Bench.csproj
browser-plan/: 00_INDEX.md  01_ARCHITECTURE.md  02_PROJECT_SETUP.md  03_NETWORKING.md  04_HTML_PARSING.md  05_DOM.md  06_CSS.md  07_LAYOUT.md  08_FONTS_PAINT.md  09_JS_ENGINE.md  10_WEB_APIS.md  11_AVALONIA_SHELL.md  12_TESTING.md  13_MILESTONES.md  14_AGENT_TASKS.md
design/: HANDOFF.md  app.jsx  chrome.jsx  devtools.jsx  index (2).html  theme.css
native/: README.md  build-skia.ps1  build-skia.sh
native/shim/: CMakeLists.txt  smoke_test.c  tessera_skia.cpp  tessera_skia.h
src/Starling.Bindings/: PlaceholderNote.cs  Starling.Bindings.csproj
src/Starling.Codecs/: IImageDecoder.cs  NativeImageDecoder.cs  Starling.Codecs.csproj
src/Starling.Common/: Result.cs
src/Starling.Css/: PlaceholderNote.cs
src/Starling.Dom/: Node.cs  NodeKind.cs  Starling.Dom.csproj
src/Starling.Engine/: Starling.Engine.csproj
src/Starling.Gui/: App.cs  MainPage.cs  MauiProgram.cs  PageRenderer.cs  README.md  Starling.Gui.csproj
src/Starling.Headless/: Program.cs  Starling.Headless.csproj
src/Starling.Html/: Starling.Html.csproj
src/Starling.Js/: PlaceholderNote.cs
src/Starling.Layout/: LayoutEngine.cs  PlaceholderNote.cs  Starling.Layout.csproj
src/Starling.Loop/: PlaceholderNote.cs  Starling.Loop.csproj  WebEventLoop.cs
src/Starling.Net/: Starling.Net.csproj
src/Starling.Paint/: SkiaTextMeasurer.cs  Starling.Paint.csproj
src/Starling.Skia/: Starling.Skia.csproj
src/Starling.Telemetry/: OtelDiagnostics.cs  Starling.Telemetry.csproj
src/Tessera.Bindings/: DomBindingHost.cs  PlaceholderNote.cs  Tessera.Bindings.csproj
src/Tessera.Codecs/: ImageDecodeException.cs  ImageFormat.cs  Tessera.Codecs.csproj
src/Tessera.Common/: Maybe.cs
src/Tessera.Css/: PlaceholderNote.cs
src/Tessera.Dom/: Document.cs  Element.cs  Node.cs  Tessera.Dom.csproj  Text.cs
src/Tessera.Engine/: BrowserSession.cs  Engine.cs  ImageFetcher.cs  LaidOutPage.cs  NavigationHistory.cs  Tessera.Engine.csproj
src/Tessera.Gui/: BoxHitTester.cs  BoxTreeRenderer.cs  MainPage.cs  MauiProgram.cs  PageRenderer.cs  Tessera.Gui.csproj
src/Tessera.Headless/: Program.cs  Tessera.Headless.csproj
src/Tessera.Html/: HtmlParser.cs  MinimalHtmlParser.cs  Tessera.Html.csproj
src/Tessera.Js/: PlaceholderNote.cs
src/Tessera.Layout/: Geometry.cs  LayoutEngine.cs  PlaceholderNote.cs  Tessera.Layout.csproj
src/Tessera.Loop/: PlaceholderNote.cs  Tessera.Loop.csproj
src/Tessera.Net/: HttpFetcher.cs  Tessera.Net.csproj  TesseraHttpClient.cs
src/Tessera.Paint/: FontResolver.cs  Painter.cs  SkiaTextMeasurer.cs  Tessera.Paint.csproj
src/Tessera.Shell/: Program.cs  Tessera.Shell.csproj  app.manifest
src/Tessera.Skia/: SkiaInteropException.cs  Tessera.Skia.csproj
src/Tessera.Telemetry/: OtelBootstrap.cs  Tessera.Telemetry.csproj
src/Tessera.Url/: Url.cs  UrlParser.cs
tasks/: INDEX.md  README.md  SCHEMA.md
tasks/M1/: wp-M1-01a-tokenizer-scaffold.md  wp-M1-01b-tokenizer-tag-states.md  wp-M1-01c-tokenizer-rcdata-rawtext.md  wp-M1-01d-tokenizer-script.md  wp-M1-01e-tokenizer-comment-cdata.md  wp-M1-01f-tokenizer-doctype.md  wp-M1-01g-tokenizer-entities.md  wp-M1-01h-tokenizer-html5lib.md  wp-M1-02-html-tree-builder.md  wp-M1-04-dom-events.md  wp-M1-05-css-tokenizer-parser.md  wp-M1-08-layout-block-inline.md  wp-M1-09-paint-display-list.md
tasks/M2/: wp-M2-01-url-parser.md  wp-M2-02-dns.md  wp-M2-03-tcp.md  wp-M2-04-tls.md  wp-M2-05-http1.md  wp-M2-07b-live-https-fixture.md  wp-M2-07c-http-keepalive-pool.md  wp-M2-07d-encoding-hardening.md
tasks/M3/: wp-M3-01-js-lexer.md  wp-M3-02-js-parser.md  wp-M3-02a-js-parser-expressions.md  wp-M3-02b-js-parser-statements.md  wp-M3-03-js-compiler.md  wp-M3-04b-js-functions.md  wp-M3-04d-js-new-and-this.md  wp-M3-04e-js-method-binding.md  wp-M3-06-native-interop-pivot.md  wp-M3-06a-native-scaffold.md  wp-M3-06b-native-build.md  wp-M3-06c-decoded-image.md  wp-M3-06d-codecs.md  wp-M3-06e-sslstream-tls.md  wp-M3-06f-docs-policy.md  wp-M3-06g-skia-shim.md  wp-M3-06g2-shim-drawimage.md  wp-M3-06h-skia-interop.md  wp-M3-06i-skia-backend.md  wp-M3-06j-skia-fonts.md  wp-M3-06k-gui-canvas.md  wp-M3-06l-ci-policy.md
tasks/lib/: claim.sh
testdata/: comments-demo.html  hello.html  tokenizer-demo.html
testdata/golden/: README.md
tests/Starling.Bindings.Tests/: PlaceholderSmokeTests.cs  Starling.Bindings.Tests.csproj
tests/Starling.Codecs.Tests/: ImageFormatSnifferTests.cs  Starling.Codecs.Tests.csproj
tests/Starling.Common.Tests/: Starling.Common.Tests.csproj
tests/Starling.Css.Tests/: AspectRatioTests.cs  FlexPropertyTests.cs  GridPropertyTests.cs  LengthUnitTests.cs  MediaQueryEvaluatorTests.cs  PlaceholderSmokeTests.cs  Starling.Css.Tests.csproj  SupportsEvaluatorTests.cs
tests/Starling.Dom.Tests/: DomEventTests.cs  Starling.Dom.Tests.csproj
tests/Tessera.E2E/: RenderE2ETests.cs  (+1 more)
(+249 files in other folders)
